Improve performance for checking players